--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Calculator App</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h2>Simple Calculator</h2>
