--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
 
   <h3>Saved Calculations</h3>
   <ul id="list"></ul>
+  <p id="clear" style="color: #b33; cursor: pointer;">Clear the answer</p>
 
   <script src="script.js"></script>
 </body>
